--- a/i18n/jp.yaml
+++ b/i18n/jp.yaml
@@ -58,14 +58,23 @@
 - id: "Show"
   translation: "リストを表示"
 
+- id: "Close"
+  translation: "閉じる"
+
 - id: "Search"
   translation: "検索"
 
 - id: "Search Input"
   translation: "`/` を押して検索"
 
+- id: "Search Placeholder"
+  translation: "ここに入力して検索"
+
 - id: "Search Results"
   translation: "検索結果"
+
+- id: "Search Tags"
+  translation: "タグを検索"
 
 - id: "List Label"
   translation: "%s件の投稿"
@@ -81,6 +90,12 @@
 
 - id: "Tags Label"
   translation: "全%sタグ"
+
+- id: "Tags All"
+  translation: "すべて一致"
+
+- id: "Advanced Filters"
+  translation: "高度なフィルター"
 
 - id: "No Results"
   translation: "結果が見つかりませんでした。"
